# klogg

./: .coderabbit.yaml  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION.md  NOTICE  README.md  vcpkg.json
.github/workflows/: ci-build.yml  ci-release.yml  codeql-analysis.yml  lint.yml
Resources/: klogg.icns
Resources/highlighters/: iOS Logs (Modern Elements).conf
benchmarks/: CMakeLists.txt  regex_search_benchmark.cpp
cmake/: apply_git_patch.cmake  generate_version_h.cmake
cmake/prefetch_cpm/: CMakeLists.txt
docker/oracle7/: Dockerfile
docker/oracle8/: Dockerfile
docker/ubuntu20.04/: Dockerfile
docker/ubuntu20.04_qt5.15/: Dockerfile
docker/ubuntu22.04/: Dockerfile
docker/ubuntu24.04/: Dockerfile
docs/: ADB_LOGCAT_ARCHITECTURE.md  BACKLOG.md  BUILD.md  INCREMENTAL_SEARCH_ARCHITECTURE.md  PORTABILITY.md  REGEX_BENCHMARKS.md  SPEC_CHART_AND_FILTERS_PANEL.md  TECHNICAL_DOCUMENTATION.md  WRAP_TEXT_ANALYSIS.md
docs/benchmarks/: bench-qt-incremental.json  bench-qt-streaming.json  bench-qt.json  bench-vs-avx-block-full.json  bench-vs-avx-block-incr.json  bench-vs-avx-block-stream.json  bench-vs-avx-perline-full.json  bench-vs-avx-perline-incr.json  bench-vs-avx-perline-stream.json  bench-vs-generic-block-full.json  bench-vs-generic-block-incr.json  bench-vs-generic-block-stream.json  bench-vs-generic-perline-full.json  bench-vs-generic-perline-incr.json  (+3 more)
scripts/: gen_changelog.py  lint_linux_package_runtime.py  lint_platform_fragile.py  release_stats.py  run_regex_benchmarks.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cli.h  klogg.qrc  kloggapp.h  main.cpp
src/app/i18n/: en.ts  zh_CN.ts  zh_TW.ts
src/crash_handler/src/: crashhandler.cpp  issuereporter.cpp
src/filewatch/include/: filewatcher.h
src/filewatch/src/: filewatcher.cpp
src/ios_log_provider/: CMakeLists.txt
src/ios_log_provider/include/: ios_device_manager.h  ios_syslog_receiver.h
src/ios_log_provider/src/: ios_device_manager.cpp  ios_syslog_receiver.cpp
src/klogg_version/include/: klogg_version.h
src/klogg_version/src/: klogg_version.cpp
src/logdata/: CMakeLists.txt
src/logdata/include/: abstractlogdata.h  ansicolorprocessor.h  capturestore.h  concatenatedlogdata.h  linetypes.h  logdata.h  logdataoperation.h  logdataworker.h  logfiltereddata.h  logfiltereddataworker.h  rollingfilemanager.h  searchablelogdata.h  searchgeneration.h  streaminglogdata.h
src/logdata/src/: abstractlogdata.cpp  ansicolorprocessor.cpp  capturestore.cpp  compressedlinestorage.cpp  concatenatedlogdata.cpp  encodingdetector.cpp  fileholder.cpp  logdata.cpp  logdataoperation.cpp  logdataworker.cpp  logfiltereddata.cpp  logfiltereddataworker.cpp  rollingfilemanager.cpp  searchablelogdata.cpp  streaminglogdata.cpp
src/logging/include/: logger.h
src/logging/src/: logger.cpp
src/regex/: CMakeLists.txt
src/regex/include/: hsregularexpression.h  matchercache.h  regularexpression.h
src/regex/src/: hsregularexpression.cpp  matchercache.cpp  regularexpression.cpp
src/settings/include/: configuration.h  shortcuts.h  styles.h
src/settings/src/: configuration.cpp  persistentinfo.cpp  shortcuts.cpp  styles.cpp
src/ui/: CMakeLists.txt
src/ui/include/: abstractlogview.h  adbdeviceinfo.h  adbdevicelistprovider.h  adblogcatdialog.h  adblogcatsource.h  adbprocesstransport.h  colorlabelsmanager.h  commandargumenttokenizer.h  crawlerwidget.h  devicelistprovider.h  downloader.h  filterdiffdialog.h  filteredview.h  highlightersdialog.ui  highlighterset.h  highlightersetedit.ui  iconloader.h  iosdevicelistprovider.h  iosdeviceparser.h  ioslogdialog.h  ioslogprocesstransport.h  iosnativelogtransport.h  livesourcetransport.h  logmainview.h  mainwindow.h  mainwindowtext.h  newversiondialog.h  optionsdialog.h  optionsdialog.ui  predefinedfilters.h  predefinedfilterscombobox.h  predefinedfiltersdialog.ui  quickfind.h  quickfindmux.h  quickfindpattern.h  quickfindwidget.h  quicklabelpattern.h  savefavoritedialog.h  session.h  sessioninfo.h  (+6 more)
src/ui/src/: abstractlogview.cpp  adbdevicelistprovider.cpp  adblogcatdialog.cpp  adblogcatsource.cpp  adbprocesstransport.cpp  colorlabelsmanager.cpp  crawlerwidget.cpp  downloader.cpp  filterdiffdialog.cpp  filteredview.cpp  highlightersdialog.cpp  highlighterset.cpp  highlightersetedit.cpp  iconloader.cpp  iosdevicelistprovider.cpp  iosdeviceparser.cpp  ioslogdialog.cpp  ioslogprocesstransport.cpp  iosnativelogtransport.cpp  livesourcetransport.cpp  logmainview.cpp  mainwindow.cpp  mainwindowtext.cpp  newversiondialog.cpp  optionsdialog.cpp  predefinedfilters.cpp  predefinedfilterscombobox.cpp  predefinedfiltersdialog.cpp  quickfind.cpp  quickfindmux.cpp  quickfindpattern.cpp  quickfindwidget.cpp  quicklabelpattern.cpp  savefavoritedialog.cpp  scratchpad.cpp  session.cpp  sessioninfo.cpp  tabbedcrawlerwidget.cpp  tabbedscratchpad.cpp  tabgroup.cpp  (+2 more)
src/versioncheck/: CMakeLists.txt
src/versioncheck/include/: versionchecker.h
src/versioncheck/src/: versionchecker.cpp
tests/: CMakeLists.txt
tests/helpers/: file_write_helper.cpp  test_utils.h
tests/scripts/: test_gen_changelog.py
tests/ui/: CMakeLists.txt  concatenatedlogdata_test.cpp  crawlerwidget_test.cpp  logdata_test.cpp  logfiltereddata_test.cpp  mainwindow_test.cpp  qtests_main.cpp
tests/unit/: CMakeLists.txt  adb_ui_transport_test.cpp  ansicolorprocessor_test.cpp  capturestore_test.cpp  cli_test.cpp  colorlabelsmanager_test.cpp  configuration_test.cpp  filewatcher_test.cpp  highlighter_vectorscan_test.cpp  iosdeviceparser_test.cpp  live_save_crash_repro_test.cpp  live_save_split_test.cpp  logfiltereddataworker_test.cpp  newversiondialog_test.cpp  patternmatcher_test.cpp  quicklabelpattern_test.cpp  searchgeneration_test.cpp  sessioninfo_test.cpp  shortcut_bindings_test.cpp  streaminglogdata_test.cpp  styles_test.cpp  tabbedcrawlerwidget_test.cpp  tabgroupdropresolver_test.cpp  tabgroupmanager_test.cpp  tests_main.cpp  updatedownload_test.cpp  versionchecker_test.cpp  wrappedstring_test.cpp
tests/vectorscan/: CMakeLists.txt  vectorscan_tests.cpp
website/: config.toml
(+49 files in other folders)
