# Add test cpp file
add_executable(klogg_tests
    cli_test.cpp
    colorlabelsmanager_test.cpp
    configuration_test.cpp
    highlighter_vectorscan_test.cpp
    linepositionarray_test.cpp
    patternmatcher_test.cpp
    quicklabelpattern_test.cpp
    sessioninfo_test.cpp
    tabgroupdropresolver_test.cpp
    tabgroupmanager_test.cpp
    tests_main.cpp
)

target_link_libraries(klogg_tests klogg_ui klogg_utils klogg_logging Catch2 Qt${QT_VERSION_MAJOR}::Test test_utils)
target_include_directories(klogg_tests PRIVATE "${CMAKE_SOURCE_DIR}/src/app")
set_target_properties(klogg_tests PROPERTIES AUTOMOC ON)
klogg_configure_test_target(klogg_tests)

klogg_add_runtime_test(klogg_tests klogg_tests)
